--- a/WebApiAlmacen/appsettings.Development.json
+++ b/WebApiAlmacen/appsettings.Development.json
@@ -9,5 +9,18 @@
     "DefaultConnection": "Data Source=PACO;Initial Catalog=MiAlmacen;Integrated Security=True;TrustServerCertificate=True"
   },
   "ClaveEncriptacion": "123Curso2022321",
-  "ClaveJWT": "Curso@.net#2023_Arelance"
+  "ClaveJWT": "Curso@.net#2023_Arelance",
+  "Serilog": {
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      {
+        "Name": "MSSqlServer",
+        "Args": {
+          "connectionString": "Data Source=PACO;Initial Catalog=MiAlmacen;Integrated Security=True;TrustServerCertificate=True",
+          "tableName": "Logs",
+          "autoCreateSqlTable": true
+        }
+      }
+    ]
+  }
 }
